# c_scriptexec

./: CHANGELOG.md  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
examples/: example.c
include/: scriptexec.h
src/: scriptexec.c
tests/: test.c  test.h  test_custom_temporary_directory.c  test_exit_on_error_break.c  test_exit_on_error_ignore.c  test_exit_on_error_valid.c  test_invalid_command.c  test_null_script.c  test_stability.c  test_valid_command.c  test_valid_multiple_commands.c  test_valid_multiple_commands_default_options.c  test_valid_multiple_commands_with_invalid_runner.c  test_valid_multiple_commands_with_print.c  test_valid_multiple_commands_with_valid_runner.c
